Fix document display resposiveness Refers to [#114977027] - Align md-cards - Add home bar

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -5,6 +5,10 @@
     padding-top: 3px;
 }
 
+html {
+    width: 100%;
+}
+
 .viewDocs {
     height: 550px;
     text-align: left;
@@ -551,7 +555,7 @@ md-input-container textarea.md-input {
 
 .doc-container {
     padding: 0;
-    margin: 0;
+    margin-left: 70px;
     text-align: left;
     list-style: none;
     display: -webkit-box;
@@ -572,7 +576,7 @@ md-input-container textarea.md-input {
 }
 .doc-display {
     padding: 5px;
-    width: 250px;
+    width: 290px;
     height: 400px;
     margin-top: 10px;
     line-height: 20px;
@@ -700,7 +704,7 @@ md-input-container textarea.md-input {
     color: beige;
 }
 .all-doc {
-    margin-top: -6px;
+    margin-top: 0px;
     font-size: 0.7em;
 }
 .sidebar-role {
